--- a/todo/package.json
+++ b/todo/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
@@ -17,6 +18,9 @@
     "expo": "~47.0.8",
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "nanoid": "^4.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
